# unpythonic

./: .gitignore  AUTHORS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HACKING.md  LICENSE.md  README.md  TODO_DEFERRED.md  countlines.py  flake8rc  macropy3  makedist.sh  measure_coverage.sh  numerics.py  pylintrc  pyproject.toml  quick_tour.py  requirements.txt  runtests.py  runtests.sh  setup.py  tour.py  uploaddist.sh
.github/workflows/: ci.yml  coverage.yml  python-package.yml
autocurry_macro/: README.md  autocurry.py  main.py
briefs/: 2.2.0-remaining-issues.md  befunge-dialect.md  bf-dialect.md  fleet-sweep-coverage-and-deps.md  modernization-phase1-audit-brief.md  modernization-phase1-audit-report.md  modernization-phase2-5-implementation.md  monads-implementation.md  multishot-implementation.md
doc/: design-notes.md  dialects.md  essays.md  features.md  macros.md  readings.md  repl.md  troubleshooting.md
doc/dialects/: befunge.md  bf.md  lispython.md  listhell.md  pytkell.md
macro_extras/: README.md  aif.py  autocurry.py  cond.py  dialects.py  import_hooks.py  letm.py  lispython.py  macropy3  main.py  multilambda.py  prefix.py  run.py  silly_macropy3  test_autoret.py  test_conts.py  test_curry.py  test_forall.py  test_fup.py  test_ifexprs.py  test_lambdatools.py  test_letdo.py  test_letsyntax.py  test_lispython.py  test_prefix.py  test_tco.py
unpythonic/: __init__.py  _let_support.py  amb.py  arity.py  assignonce.py  collections.py  conditions.py  dispatch.py  dynassign.py  dynscope.py  ec.py  env.py  environ.py  excutil.py  fasttco.py  fix.py  fold.py  fploop.py  fun.py  funutil.py  fup.py  fupdate.py  gmemo.py  gtco.py  it.py  lazyutil.py  let.py  let_lispy.py  let_pythonic.py  letenv.py  lispylet.py  llist.py  mathseq.py  misc.py  norebind.py  numutil.py  rc.py  regutil.py  replclient.py  seq.py  (+9 more)
unpythonic/dialects/: __init__.py  befunge.py  bf.py  lispython.py  listhell.py  pytkell.py
unpythonic/dialects/tests/: test_befunge.py  test_bf.py  test_lispy.py  test_lispython.py  test_listhell.py  test_pytkell.py
unpythonic/monads/: __init__.py  abc.py  core.py  either.py  identity.py  list.py  maybe.py  reader.py  state.py  writer.py
unpythonic/monads/tests/: test_monads.py
unpythonic/net/: __init__.py  client.py  common.py  msg.py  ptyproxy.py  ptyproxy_posix.py  ptyproxy_windows.py  server.py  util.py
unpythonic/net/test/: test_msg.py  test_util.py
unpythonic/net/tests/: fixtures.py  test_client.py  test_msg.py  test_util.py
unpythonic/syntax/: __init__.py  astcompat.py  autocurry.py  autoref.py  cond.py  curry.py  dbg.py  forall.py  fupstx.py  ifexprs.py  lambdatools.py  lazify.py  letdo.py  letdoutil.py  letsyntax.py  monadic_do.py  multishot.py  nameutil.py  nb.py  prefix.py  scopeanalyzer.py  scoping.py  simplelet.py  slicing.py  tailtools.py  testingtools.py  testutil.py  util.py
unpythonic/syntax/test/: test_autoref.py  test_autoret.py  test_conts.py  test_conts_escape.py  test_conts_gen.py  test_conts_topo.py  test_curry.py  test_dbg.py  test_forall.py  test_fup.py  test_ifexprs.py  test_lambdatools.py  test_lazify.py  test_letdo.py  test_letdoutil.py  test_letsyntax.py  test_nameutil.py  test_nb.py  test_prefix.py  test_scopeanalyzer.py  test_simplelet.py  test_slicing.py  test_tco.py  test_testutil.py  test_util.py  testing_testingtools.py  testing_testutil.py
unpythonic/syntax/tests/: selftest_testingtools.py  test_autocurry.py  test_autoref.py  test_autoret.py  test_conts.py  test_conts_escape.py  test_conts_gen.py  test_conts_multishot.py  test_conts_topo.py  test_dbg.py  test_forall.py  test_ifexprs.py  test_lambdatools.py  test_lazify.py  test_letdo.py  test_letdoutil.py  test_letsyntax.py  test_monadic_do.py  test_monadic_do_integration.py  test_multishot.py  test_nameutil.py  test_nb.py  test_prefix.py  test_scopeanalyzer.py  test_scopeanalyzer_3_11.py  test_simplelet.py  test_tco.py  test_testingtools.py  test_util.py  testing_testingtools.py
unpythonic/test/: ansicolor.py  fixtures.py  runner.py  test_amb.py  test_arity.py  test_assignonce.py  test_collections.py  test_conditions.py  test_dispatch.py  test_dynassign.py  test_ec.py  test_env.py  test_fix.py  test_fold.py  test_fploop.py  test_fpnumerics.py  test_fun.py  test_fup.py  test_gmemo.py  test_gtco.py  test_it.py  test_let.py  test_lispylet.py  test_llist.py  test_mathseq.py  test_misc.py  test_seq.py  test_singleton.py  test_slicing.py  test_symbol.py  test_tco.py  test_typecheck.py
unpythonic/tests/: test_amb.py  test_arity.py  test_assignonce.py  test_collections.py  test_conditions.py  test_dispatch.py  test_dynassign.py  test_ec.py  test_env.py  test_environ.py  test_excutil.py  test_fix.py  test_fold.py  test_fploop.py  test_fpnumerics.py  test_fun.py  test_funutil.py  test_fup.py  test_gmemo.py  test_gtco.py  test_it.py  test_let.py  test_lispylet.py  test_llist.py  test_mathseq.py  test_misc.py  test_numutil.py  test_seq.py  test_singleton.py  test_slicing.py  test_symbol.py  test_tco.py  test_timeutil.py  test_typecheck.py
